* Added support for defining the colors of tiles and entities on the minimap.
* Added 'show_on_minimap' event component. Currently, this only applies to intermap teleport events.
* Added 'show_on_minimap' property to NPCs.
* Properties that take an alignment can now be aligned to the menu frame.
* Support multiple images in animation definitions. (bloodhero)

Engine fixes:

* Fix memory leak of tab control in stash menu (MiroslavR)
* Fixed stat bars not having any fill when the value they were representing was non-zero. Now they will always show at least 1 pixel of the bar's fill graphics.
* Fixed a bug where the game window could be resized below the minimum size after exiting fullscreen mode.
* Removed the default resolution scaling when virtual_heights is undefined.
* Improved performance when checking map event hotspots.
* Fix Windows-style paths with backslashes not working on non-Windows systems.
* Prevent allies counting as attack targets when using mouse movement.
* Fix needing to press the 'Cancel' key twice to exit the vendor menu.
* Fix unintended key presses being registered when quitting the game via an OS keyboard shortcut.
* Fix divide-by-zero crash when using the dev HUD with a game that uses orthogonal rendering.
* Fixed a memory leak in Loot copy constructor.
* Fixed 'resist_percent' property of engine/combat.txt not working when targets had 100% resistance.

Game updates:

* New graphics for HP and MP status bars

Translation updates:

* Belarusian (be) update (Zmicer Turok)
* German (de) update (Wuzzy2)
* Basque (eu) by aitzkora
* Scottish Gaelic (gd) update (GunChleoc)
* Hungarian (hu) update (litoll)
* Norwegian (nb) update (Elias Nykrem)
* Portuguese (pt) update (Rui)
* Russian (ru) update (Igor Polyakov)
* Slovak (sk) update (MiroslavR)
* Vietnamese (vi) update (Nguyễn Gia Phong)
* Chinese (zh) update (sakura09123)



Flare v1.11 (http://flarerpg.org/index.php/2019/07/27/flare-1-11/)

Engine features:
