@@ -445,7 +445,15 @@ body {
 
 <p><strong>slot.quantity_label</strong> | <code>label</code> | Setting for the slot quantity text.</p>
 
+<p><strong>slot.quantity_color</strong> | <code>color</code> | Text color for the slot quantity text.</p>
+
 <p><strong>slot.quantity_bg_color</strong> | <code>color, int : Color, Alpha</code> | If a slot has a quantity, a rectangle filled with this color will be placed beneath the text.</p>
+
+<p><strong>slot.hotkey_label</strong> | <code>label</code> | Setting for the slot hotkey text.</p>
+
+<p><strong>slot.hotkey_color</strong> | <code>color</code> | Text color for the slot hotkey text.</p>
+
+<p><strong>slot.hotkey_bg_color</strong> | <code>color, int : Color, Alpha</code> | If a slot has a hotkey, a rectangle filled with this color will be placed beneath the text.</p>
 
 <p><strong>listbox.text_margin</strong> | <code>int, int : Left margin, Right margin</code> | The pixel margin to leave on the left and right sides of listbox element text.</p>
 
